Fix some typos, add flag to force sockets and test load imbalance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,10 @@ include(CMakePackageConfigHelpers)
 find_package(Threads REQUIRED)
 find_package(MPI REQUIRED)
 
+option(LIBIS_FORCE_SOCKET_INTERCOMM
+	"Force use of sockets for the intercommunicator between the simulation and clients"
+	OFF)
+
 include_directories(${MPI_CXX_INCLUDE_PATH})
 add_library(is_sim SHARED is_sim.cpp is_common.cpp is_simstate.cpp is_buffering.cpp intercomm.cpp)
 target_link_libraries(is_sim PUBLIC ${MPI_CXX_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
@@ -31,6 +35,11 @@ target_include_directories(is_sim PUBLIC
 	$<INSTALL_INTERFACE:include>
 )
 
+if (LIBIS_FORCE_SOCKET_INTERCOMM)
+	target_compile_definitions(is_sim PUBLIC
+		LIBIS_FORCE_SOCKET_INTERCOMM)
+endif()
+
 add_library(is_client SHARED is_client.cpp is_common.cpp is_simstate.cpp is_buffering.cpp intercomm.cpp)
 target_link_libraries(is_client PUBLIC ${MPI_CXX_LIBRARIES})
 target_include_directories(is_client PUBLIC
@@ -39,6 +48,11 @@ target_include_directories(is_client PUBLIC
 	$<BUILD_INTERFACE:${MPI_CXX_INCLUDE_PATH}>
 	$<INSTALL_INTERFACE:include>
 )
+
+if (LIBIS_FORCE_SOCKET_INTERCOMM)
+	target_compile_definitions(is_client PUBLIC
+		LIBIS_FORCE_SOCKET_INTERCOMM)
+endif()
 
 add_executable(grid_util grid_util.cpp)
 
